[package]
name = "autoclear-dispatch"
version = "0.1.0"
authors = ["jude-LafiteIII <judewrs@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
reqwest = "0.10.6"
sqlx = {version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "mysql", "bigdecimal"]}
tokio = {version = "0.2.19", features = ["macros", "time"]}

lazy_static = "1.4.0"

serde = "1.0.82"
serde_derive = "1.0.83"
serde_json = "1.0.33"
